--- a/index.html
+++ b/index.html
@@ -245,42 +245,42 @@
     gap: 20px;
     align-items: center;
   " id="unescoImages">
-      <img src="UNSECO/UNESCO_001.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_002.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_003.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_004.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_005.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_006.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_007.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_008.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_009.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_010.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_011.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_012.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_013.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_014.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_015.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_016.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_017.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_018.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_019.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_020.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_021.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_022.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_023.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_024.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_025.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_026.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_027.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_028.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_029.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_030.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_031.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_032.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_033.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_034.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_035.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
-      <img src="UNSECO/UNESCO_036.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_001.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_002.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_003.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_004.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_005.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_006.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_007.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_008.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_009.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_010.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_011.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_012.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_013.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_014.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_015.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_016.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_017.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_018.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_019.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_020.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_021.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_022.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_023.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_024.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_025.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_026.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_027.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_028.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_029.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_030.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_031.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_032.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_033.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_034.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_035.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+      <img src="UNESCO_036.jpg" alt="UNESCO 1"  style="max-width: 90%; max-height: 90%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
 
 
     <!-- add more images here -->
@@ -553,3 +553,4 @@ overviewOverlay.addEventListener("click", (e) => {
   </script>
 </body>
 </html>
+
