--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   <div class="landing" id="landing">
     <div class="overlay"></div>
     <div class="landing-content">
-      <img src="landingpage.png" width="650px" height="1200px" alt="landingpage"> 
+      <img src="landingpage.png" width="650px" height="1100px" alt="landingpage"> 
       <p>Click anywhere to begin exploring.</p>
     </div>
   </div>
@@ -530,7 +530,7 @@ overviewOverlay.addEventListener("click", (e) => {
   { question: "Which country does DOST collaborate with?", options: ["Haiti", "Egypt", "Iceland", "France"], correct: 3 },
   { question: "Which bilateral partner does Sandwich Scholarship Program?", options: ["Canada", "Taiwan", "India", "China"], correct: 1 },
   { question: "Which area of study does South Korea priorities?", options: ["Health", "Engineering", "Information Technology (IT)", "Nuclear"], correct: 0 },
-  { question: "Which one is a country from Europe?", options: ["Maldives", "Indonesia", "Italy", "Russia"], correct: 2 },
+  { question: "Which one is a country from Europe?", options: ["Maldives", "Indonesia", "Italy", "Canada"], correct: 2 },
   { question: "who is the Secretary of DOST?", options: ["Sec. Renato U. Solidum, Jr.", "Sec. Arthur T. Gumabao", "Sec. Leah J. Buendia", "Sec. Renato U. Solidum, Sr."], correct: 0 },
   { question: "What countries composes ASEAN CLM?", options: ["Cambodia-Lao PDR-Myanmar", "Canada-Laoag-Manila", "China-Lithuania-Malaysia", "Cambodia-Libia-Mexico"], correct: 0 },
   { question: "Which country has still monarchy?", options: ["Philippines", "Japan", "Singapore", "USA"], correct: 1 },
@@ -588,3 +588,4 @@ overviewOverlay.addEventListener("click", (e) => {
   </script>
 </body>
 </html>
+
