--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   <div class="landing" id="landing">
     <div class="overlay"></div>
     <div class="landing-content">
-      <img src="landingpage.png" width="650px" height="1150px" alt="landingpage"> 
+      <img src="landingpage.webp" width="650px" height="1150px" alt="landingpage"> 
     </div>
   </div>
 
@@ -300,7 +300,7 @@
   align-items: center;
   z-index: 2000;
 ">
-  <img src="overview.png" alt="Overview" style="
+  <img src="overview.webp" alt="Overview" style="
     max-width: 90%;
     max-height: 90%;
     border-radius: 10px;
@@ -363,7 +363,7 @@
     const allowedCountries = ['Italy','United Kingdom','Australia','Japan','United States of America','Canada','Cambodia','Laos','Myanmar','France','Taiwan','South Korea','Philippines','India','China','East Asia'];
 
      const shortInfo = {
-      'Philippines': {capital: 'Manila', images:['Ph1.png','Ph2.png','Ph3.png']},
+      'Philippines': {capital: 'Manila', images:['Ph1.webp','Ph2.webp','Ph3.webp']},
       'United States of America': {capital: 'Washington, D.C.', detail: 'The partnership with the USA is on agriculture. We are sending PhD scholars to Texas Tech University taking up Plant and Soil Science', note: [['3','On-going','PHD']]},
       'Japan': {capital: 'Tokyo', detail: 'The top partnership with Japan is on agriculture and health. We are sending PhD scholars to Nagoya and Osaka University. We also have joint research projects in agriculture, health, engineering, and nuclear fields.',note: [['9','On-going','PHD']]},
       'France': {capital: 'Paris', detail: 'The partnership with France is on health, engineering, environment, agriculture, and economy. We are sending PhD scholars to Texas Tech University taking up Plant and Soil Science',note: [['97','On-going','MS'],['19','On-going','PHD']], univ:[['AIX-Marsielle University'],['Cote D Azur University'], ['Montpellier Supagro'],['National Museum of Natural History'],['Paul Sabatier University'],['Toulouse 1 Capitole University'],['University of Limoges'],['University of Paris-Saclay'],['University of Picardy Jules Verne'],['University of Strasbourg'],['University of Technology of Compiegne'],['University of Toulouse']]},
@@ -588,6 +588,7 @@ overviewOverlay.addEventListener("click", (e) => {
   </script>
 </body>
 </html>
+
 
 
 
