--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
     let globalView = map.getCenter();
     let globalZoom = map.getZoom();
 
-    fetch('https://raw.githubusercontent.com/johan/world.geo.json/master/countries.geo.json')
+    fetch('https://cdn.jsdelivr.net/gh/johan/world.geo.json@master/countries.geo.json')
       .then(res => res.json())
       .then(data => {
         L.geoJSON(data, {
@@ -621,6 +621,7 @@ overviewOverlay.addEventListener("click", (e) => {
   </script>
 </body>
 </html>
+
 
 
 
