--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@
 
   /* =====  (e.g., Philippines) ===== */
   if (info.impact && info.impact.length > 0) {
-    html += `<b>Overview: Multilateral Engagements</b><br>`
+    html += `<b>Overview: Multilateral Engagements</b> ${info.impact}<br><br>`;
   }
     if (info.multilateral && info.multilateral.length > 0) {
-    html += `<b>Overview: Impact Assessment</b><br>`
+    html += `<b>Overview: Impact Assessment</b> ${info.multilateral}<br><br>`;
   }
      
 
@@ -624,6 +624,7 @@ overviewOverlay.addEventListener("click", (e) => {
   </script>
 </body>
 </html>
+
 
 
 
